k8s/kustomize/sample-manifests/manageEnvFrontend/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: coit-frontend
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: staging.jijo2.com.35-225-129-163.sslip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: coit-frontend-lb
            port:
              number: 80
